# io-schema

./: .gitignore  Makefile  coverage.json  pyproject.toml
.github/workflows/: ci.yaml  sync-to-A-Team-VPL.yaml
io_schema/: products.py
src/io_schema/: __init__.py  cart.py  entry.py  image.py  item.py  product.py  products.py  profile.py  user.py  users.py
src/io_schema/events/: user_management.py
src/io_schema/test/: __init__.py
tests/integration/: test_product_schema.py
tests/unit/: test_import.py
