[tool.poetry]
name = "tex-corver-io-schema"
version = "0.1.0"
description = ""
authors = ["Long Le <hjjddbz@gmail.com>"]
readme = "README.md"
packages = [{ include = "io_schema", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.4"
pytest = "8.2.2"
tex-corver-core = {git = "git@github.com:tex-corver/core.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
